# tauri-plugin-app-exit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: audit.yml  publish.yml
android/: .gitignore  build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: ExitAppPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/tauri-plugin-app-exit/: ExitAppPlugin.swift
ios/tauri-plugin-app-exit.xcodeproj/: project.pbxproj
ios/tauri-plugin-app-exit.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/tauri-plugin-app-exit.xcodeproj/project.xcworkspace/xcuserdata/wtto.xcuserdatad/: UserInterfaceState.xcuserstate
ios/tauri-plugin-app-exit.xcodeproj/xcuserdata/wtto.xcuserdatad/xcschemes/: xcschememanagement.plist
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
