[package]
name = "tauri-plugin-app-exit"
version = "0.1.0"
authors = [ "wtto00" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-src", "/node_modules"]
links = "tauri-plugin-app-exit"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
